# paddle

./: .editorconfig  .gitignore  .space.kts  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.run/: ApplicationKt.run.xml  Example Build.run.xml  Example Exec Main.run.xml  Example MyPy.run.xml  Example PyLint.run.xml  Example Test.run.xml  Example [cli_run].run.xml  Example_ Run Paddle CLI (Gradle).run.xml  Example_ Run Paddle CLI (Kotlin).run.xml
app/: build.gradle.kts
cli/: build.gradle.kts
core/: build.gradle.kts
docs/: sketch.md
example/: .gitignore  build.yaml  paddle-lock.json  paddle.auth.yaml.example  paddle.yaml  schema.json  setup.cfg
example/.run/: My Task.run.xml  example [main].run.xml
example/dependency/: paddle.yaml
example/dependency/src/kernel/: app.py
example/plugins/py/: paddle-plugins.yaml
example/plugins/py/first/: plugins.py
example/src/main/: main.py
example/src/test/: test_sample.py
example/subproject/: paddle.yaml  setup.cfg
example/subproject/dependency/: paddle.yaml  setup.cfg
example/subproject/src/: main.py  util.py
example/subproject/src/main/app/: foo.py
example/subproject/test/: test_app.py
example/subproject/test/bar/: test_app.py
example/subsubproject/: paddle.yaml
idea/: build.gradle.kts
plugins-server/: server.py
python-plugins/: __main__.py  config.py  config_impl.py  config_spec.py  config_spec_impl.py  container.py  converters.py  paddle_client.py  plugin.py  plugins_pb2.py  plugins_pb2_grpc.py  project.py  project_impl.py  (+2 more)
(+569 files in other folders)
