[metadata]
name = subproject
version = 0.1.0
author = Unknown Author
author_email = unknown@example.com
description = The author did not provide any description
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3


[options]
package_dir = 
	 = src
packages = 
	find:
python_requires = >=3.9


[options.packages.find]
where = src